--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Honeydet Scanner</title>
+    <title>Honeydet Scanner - Version 0.9</title>
     <link rel="stylesheet" href="/assets/styles.css">
     <script src="/assets/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -11,7 +13,7 @@
 <body>
     <div class="header d-flex justify-content-between align-items-center px-3">
         <img src="assets/logo.png" alt="Honeydet Logo">
-        Honeydet (Go Honeypot Detector Tool - Version 0.8)
+        Honeydet (Go Honeypot Detector Tool - Version 0.9)
         <div>
             <a href="https://github.com/referefref/honeydet" class="ml-2"><i class="fab fa-github"></i></a>
             <a href="https://jamesbrine.com.au" class="ml-2"><i class="fas fa-globe"></i></a>
@@ -19,69 +21,113 @@
     </div>
 
     <div class="container mt-4">
-	        <div class="row">
-        <div class="col-md-6">
-            <label for="hostInput">Hosts</label>
-            <input type="text" id="hostInput" class="form-control" placeholder="192.168.1.1, 192.168.1.0/24">
+        <div class="row">
+            <div class="col-md-6">
+                <label for="hostInput">Hosts</label>
+                <input type="text" id="hostInput" class="form-control" placeholder="192.168.1.1, 192.168.1.0/24">
+            </div>
+            <div class="col-md-6">
+                <label for="portInput">Ports</label>
+                <input type="text" id="portInput" class="form-control" value="22">
+            </div>
         </div>
-        <div class="col-md-6">
-            <label for="portInput">Ports</label>
-            <input type="text" id="portInput" class="form-control" value="22">
-        </div>
+
+	<div class="form-group mt-3">
+    <div class="custom-control custom-switch">
+        <input type="checkbox" class="custom-control-input" id="advancedOptionsToggle">
+	<label class="custom-control-label" for="advancedOptionsToggle">Advanced Options</label>
     </div>
-    <div class="row">
-        <div class="col-md-6">
-            <label for="threadsInput">Threads</label>
-            <input type="number" id="threadsInput" class="form-control" value="10" min="1" max="1000">
+    <div id="advancedOptions" style="display:none;">
+        <div class="row mt-2">
+            <div class="col-md-6">
+                <label for="threadsInput" title="Number of concurrent threads for scanning">Threads</label>
+                <input type="number" id="threadsInput" class="form-control" value="10" min="1" max="1000">
+            </div>
+            <div class="col-md-6">
+                <label for="timeoutInput" title="Connection timeout in seconds">Timeout</label>
+                <input type="number" id="timeoutInput" class="form-control" value="5" min="1">
+            </div>
         </div>
-        <div class="col-md-6">
-            <label for="protocolSelect">Protocol</label>
-            <select id="protocolSelect" class="form-control">
-                <option value="tcp">TCP</option>
-                <option value="udp">UDP</option>
-            </select>
+        <div class="row mt-2">
+            <div class="col-md-6">
+                <label for="delayInput" title="Delay in milliseconds between requests to a single host">Delay</label>
+                <input type="number" id="delayInput" class="form-control" value="0" min="0">
+            </div>
+            <div class="col-md-6">
+                <label for="protocolSelect" title="Protocol to use (TCP/UDP)">Protocol</label>
+                <select id="protocolSelect" class="form-control">
+                    <option value="tcp">TCP</option>
+                    <option value="udp">UDP</option>
+                </select>
+            </div>
         </div>
-    </div>
-    <div class="row mt-3 button-row">
-    <div class="col-md-3">
-        <button id="scanBtn" class="btn btn-success" onclick="startScan()">Scan</button>
-	    <div class="btn-group">
-            <button id="downloadBtn" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Download Results
-            </button>
-            <div class="dropdown-menu">
-                <a class="dropdown-item" href="#" onclick="downloadResults('json')">JSON</a>
-                <a class="dropdown-item" href="#" onclick="downloadResults('csv')">CSV</a>
+        <div class="row mt-2">
+            <div class="col-md-6">
+                <label for="pingCheckInput" title="Check if the host responds to ping before scanning">Ping Check</label>
+                <input type="checkbox" id="pingCheckInput" class="form-control">
+            </div>
+            <div class="col-md-6">
+                <label for="portOverrideInput" title="Override port matching to run all signatures against all ports">Port Override</label>
+                <input type="checkbox" id="portOverrideInput" class="form-control">
+            </div>
+        </div>
+        <div class="row mt-2">
+            <div class="col-md-6">
+                <label for="usernameInput" title="Username for SSH authentication">Username</label>
+                <input type="text" id="usernameInput" class="form-control">
+            </div>
+            <div class="col-md-6">
+                <label for="passwordInput" title="Password for SSH authentication">Password</label>
+                <input type="password" id="passwordInput" class="form-control">
             </div>
         </div>
     </div>
-    <div class="col-md-6">
-        <input type="text" id="searchInput" class="form-control" placeholder="Search Results">
-    </div>
-    <div class="col-md-3">
-        <button id="clearBtn" class="btn btn-danger">Clear Results</button>
-    </div>
-    </div>
-    <div id="loadingOverlay" class="overlay">
-	    <div class="loadingCircle"></div>
-    </div>
+</div>
 
-    <table id="resultsTable" class="table table-dark">
-        <thead>
-            <tr>
-                <th onclick="sortTable(0)">Scan Time</th>
-                <th onclick="sortTable(1)">Host</th>
-                <th onclick="sortTable(2)">Port</th>
-                <th onclick="sortTable(3)">Is Honeypot</th>
-                <th onclick="sortTable(4)">Honeypot Type</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
+        <div class="row mt-3 button-row">
+            <div class="col-md-3">
+                <button id="scanBtn" class="btn btn-success" onclick="startScan()">Scan</button>
+            </div>
+        </div>
+
+        <!-- Scan Executions Table -->
+        <div class="mt-4">
+            <h5>Scan Executions</h5>
+            <table id="scanExecutionsTable" class="table table-dark mt-2">
+                <thead>
+                    <tr>
+                        <th>Scan Start Time</th>
+                        <th>Scan Finish Time</th>
+                        <th>Targets</th>
+                        <th>Ports</th>
+                        <th>Status</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
+
+        <!-- Results Table -->
+        <div class="mt-4">
+            <h5>Results</h5>
+            <table id="resultsTable" class="table table-dark mt-2">
+                <thead>
+                    <tr>
+                        <th>Scan Time</th>
+                        <th>Host</th>
+                        <th>Port</th>
+                        <th>Is Honeypot</th>
+                        <th>Honeypot Type</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+        </div>
     </div>
 
     <div class="footer">
-        Honeydet v0.8 - jamesbrine.com.au
+        Honeydet v0.9 - jamesbrine.com.au
     </div>
 </body>
 </html>
