--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <div class="row mt-3 button-row">
             <div class="col-md-3">
-                <button id="scanBtn" class="btn btn-success" onclick="startScan()">Scan</button>
+                <button id="scanBtn" class="btn btn-success">Scan</button>
             </div>
         </div>
 
@@ -107,7 +107,9 @@
                 <tbody></tbody>
             </table>
         </div>
-
+	<div class="mt-4">
+	    <input type="text" id="searchInput" class="form-control" placeholder="Search Results...">
+	</div>
         <!-- Results Table -->
         <div class="mt-4">
             <h5>Results</h5>
