--- a/index.html
+++ b/index.html
@@ -196,21 +196,30 @@
 		            </select>
 		        </div>
 		    </div>
-		
+	
+		    <div class="table-responsive">
 		    <table id="resultsTable" class="table table-dark mt-2">
 		        <thead>
 		            <tr>
-		                <th>Scan Time</th>
-		                <th>Host</th>
-		                <th>Port</th>
-		                <th>Honeypot</th>
-		                <th>Type</th>
-		                <th>Confidence</th>
-		                <th>Comment</th>
-		            </tr>
+				<th class="time-col">Scan Time</th>
+		                <th class="host-col">Host</th>
+		                <th class="port-col">Port</th>
+		                <th class="honeypot-col">Honeypot</th>
+			        <th class="type-col">Type</th>
+			        <th class="confidence-col">Confidence</th>
+				<th class="comment-col">Comment</th>
+			    </tr>
 		        </thead>
-		        <tbody></tbody>
+		        <tbody>
+    <tr onclick="toggleShodanInfo(this)">
+    </tr>
+    <tr class="shodan-info" style="display: none;">
+        <td colspan="7">
+        </td>
+    </tr>
+			</tbody>
 		    </table>
+		    </div>
 		</div>
 
 	<div class="footer">
